--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 async-generator==1.10
 attrs==21.4.0
 beautifulsoup4==4.10.0
+boto==2.49.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -41,5 +42,3 @@ visitor==0.1.3
 Werkzeug==2.1.1
 wsproto==1.1.0
 WTForms==3.0.1
-
-boto~=2.49.0
