--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pyOpenSSL==22.0.0
 pyperclip==1.8.2
 PySocks==1.7.1
 python-dotenv==0.20.0
+psycopg2-binary==2.9.3
 requests==2.27.1
 selenium==4.1.3
 sniffio==1.2.0
